// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`storyshots components/visualize/Paragraph with props 1`] = `
<div
  style="height: 100%;"
>
  <div
    class="lck-color-content"
    title="Titre"
    type="Paragraph"
  >
    
  I am a paragraph.

  </div>
</div>
`;

exports[`storyshots components/visualize/Paragraph without content 1`] = `
<div
  style="height: 100%;"
>
  <!---->
</div>
`;
